# arrive

./: CMakeLists.txt  meson.build  pretifi_code.sh
data/: Arrive.desktop  CMakeLists.txt  com.github.cjfloss.arrive.appdata.xml.in  com.github.cjfloss.arrive.desktop.in  com.github.cjfloss.arrive.gschema.xml  meson.build  org.pantheon.Arrive.gschema.xml
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  appcenter.pot  arrive.pot  com.github.cjfloss.arrive.pot  en_AU.po  en_CA.po  en_GB.po  es.po  fr.po  fr_CA.po  it.po  meson.build  pt.po  pt_BR.po
src/: Arrive.vala  CMakeLists.txt  Utils.vala  config.vala  meson.build
src/Model/: Aria2.vala  Aria2Model.vala  AriaHttp.vala  AriaMagnet.vala  AriaTorrent.vala  DownloadItem.vala  DownloadItemModel.vala  DownloadList.vala  FinishedItem.vala  FinishedList.vala  IDownloadItem.vala  IDownloadList.vala  LauncherEntry.vala  Settings.vala
src/Widgets/: AddFileDialog.vala  AddFilePopOver.vala  CellRenderer.vala  DownloadListWelcome.vala  DownloadingList.vala  FinishedList.vala  MainWindow.vala  PauseButton.vala  WelcomeWidget.vala
vapi/: xmlrpc.vapi
